@@ -18,10 +18,6 @@ public class ESModuleTemplate extends Template
     /** template type */
     private String type = "ESModule";
     
-    /** keyword */
-    private String keyword = "es_module";
-
-    
     //
     // construction
     //
@@ -39,16 +35,7 @@ public class ESModuleTemplate extends Template
     //
 
     /** type of the template */
-    public String type()
-    {
-	return type;
-    }
-    
-    /** keyword (configuration language) */
-    public String keyword()
-    {
-	return keyword;
-    }
+    public String type() { return type; }
     
     /** create or retrieve an instance of this template (name=template-name)*/
     public Instance instance() throws DataException
