@@ -17,9 +17,6 @@ public class ESSourceTemplate extends Template
     
     /** template type */
     private String type = "ESSource";
-    
-    /** keyword */
-    private String keyword = "es_source";
 
     
     //
@@ -39,16 +36,7 @@ public class ESSourceTemplate extends Template
     //
 
     /** type of the template */
-    public String type()
-    {
-	return type;
-    }
-    
-    /** keyword (configuration language) */
-    public String keyword()
-    {
-	return keyword;
-    }
+    public String type() { return type; }
     
     /** create or retrieve an instance of this template (name=template-name)*/
     public Instance instance() throws DataException
